Ensure expansion of changelog/versioning category.

--- a/config.json
+++ b/config.json
@@ -36,6 +36,9 @@
         },
         {
           "title": "Versioning & Deprecation",
+          "config": {
+            "expand": 1
+          },
           "items": [
             {
               "title": "Versioning",
