--- a/config.json
+++ b/config.json
@@ -79,8 +79,8 @@
             },
             {
               "title": "Supported Resources",
-              "content": "docs/ActionBatchesResources.html",
-              "type": "html"
+              "content": "docs/ActionBatchesResources.md",
+              "uri": "supported-resources"
             }
           ]
         },
