update workflow permissions

--- a/.github/workflows/generate_api_index.yml
+++ b/.github/workflows/generate_api_index.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   generate-api-index:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # required for git push
 
     steps:
     - name: Checkout repository
